# attention-grupo-dia-libre

./: README.md
attention/: CMakeLists.txt  package.xml  rvizconf.rviz
attention/include/attention/: GetModels.hpp  Get_Models.hpp  Obervator.hpp  Observator.hpp
attention/src/: get_models_node.cpp  observe_object_node.cpp  set_headjoint.cpp
attention/src/attention/: GetModels.cpp  Get_Models.cpp  Observator.cpp
bt_navigation/: CMakeLists.txt  README.md  Start Nav  package.xml
bt_navigation/config/: waypoints.yaml
bt_navigation/include/bt_navigation/: GetNextWaypoint.hpp  IsRaceFinished.hpp  Move.hpp
bt_navigation/include/bt_navigation/ctrl_support/: BTActionNode.hpp  BTLifecycleCtrlNode.hpp
bt_navigation/launch/: nei_launcher.py
bt_navigation/params/: nav2_params.yaml
bt_navigation/pddl/: nei_domain.pddl
bt_navigation/src/: move_action_node.cpp  nav_wp.cpp  nei_controller.cpp
bt_navigation/src/bt_navigation/: GetNextWaypoint.cpp  IsRaceFinished.cpp  Move.cpp
obi/: yekale_pa
observe/: CMakeLists.txt  package.xml
observe/include/observe/: Observator.hpp
observe/src/: observe_object_node.cpp
observe/src/observe/: Observator.cpp
params/: tiago_nav_params.yaml
patrolling/src/: patrolling_node.cpp
